        - Add support for the <italics> tag to the screenplay.
        - Fix the rendering of <bold> and <italics> inside a <screenplay>
        fortune as text.

0.0400      Thu Oct 21 19:44:19 IST 2010
        - Squash spaces in the text output of the <info /> fields like
        <work /> , <author />, etc. This was a bug that caused that such tags
        with newlines would render improperly in fortunes.
        - Converted to use File::ShareDir for the extradata directory.
        This was done per the advice given here:
            - http://www.nntp.perl.org/group/perl.module.build/2010/10/msg2765.html .
        - Many refactorings in lib/XML/Grammar/Fortune/ToText.pm .

0.0300      Sat Sep 25 20:05:32 IST 2010
        - Add support for text-rendering of the Screenplay-XML <inlinedesc>
        tag, so it will now render as '[' ... ']' inside the paragraphs.
        - Add the tag-release.pl file to tag a release to the Subversion
        repository.

0.0200      Thu Jan 21 19:10:28 IST 2010
        - Fixed some validation errors in the XSLT stylesheet that caused
        the Firefox and Opera browser to give up with an error.
            - <xsl:call-template /> cannot operate on an <xsl:value-of />
                or have a select="." attribute.
            - <xsl:apply-templates /> has a mode="..." attribute instead
            of a name="..." attribute.
        - Now the conversion-to-text supports more tags and elements
        that were previously mis-handled (with tests).
        - Add keywords to the META.yml.

0.0109 Sat Oct 31 14:44:35 IST 2009
        - Fixed the tests if XML-LibXSLT generates indented XML.
            - as is the case on Mandriva Cooker and other systems.
            - http://nntp.x.perl.org/group/perl.cpan.testers/5800617
            - was done by removing indentation from both places.

0.0108  Wed Mar  4 22:10:25 IST 2009
        - Sorted out the installation of the extradata elements.

0.0107  Tue Mar  3 19:58:34 IST 2009