@@ -1,6 +1,8 @@
         - Add support for the <italics> tag to the screenplay.
         - Fix the rendering of <bold> and <italics> inside a <screenplay>
         fortune as text.
+        - Clarified the license and POD of XML::Grammar::Fortune::ToText .
+        and XML::Grammar::Fortune .
 
 0.0400      Thu Oct 21 19:44:19 IST 2010
         - Squash spaces in the text output of the <info /> fields like
